base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react:app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app-container
        image: knt97/my-test-react-app:latest
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
