base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
