base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingresss.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: knt-issuer
